fix: remove unnecessary gap

--- a/src/components/Visualization/styles/Visualization.module.css
+++ b/src/components/Visualization/styles/Visualization.module.css
@@ -44,7 +44,6 @@
 .fetchContainer {
     display: flex;
     align-self: flex-start;
-    gap: var(--spacers-dp4);
     position: relative;
     height: auto;
     min-width: 0;
